--- a/qiwebsite/src/App.css
+++ b/qiwebsite/src/App.css
@@ -43,6 +43,7 @@ main {
 .navbar {
   height: 65px;       /* slim navbar */
   padding: 0 1rem;
+  background-color: rgba(255, 255, 255, 0.8); /* semi-transparent */
 }
 
 .navbar-brand img.logo {
